# factorython

./: Untitled.ipynb  assembling_machine.py  bkup.py  block_maker.yaml  blueprinter.py  building_resolver.py  cargo_block_maker.py  cargo_wagon.py  cargo_wagon_assignment_problem.py  cargo_wagon_mall.py  cargo_wagon_research.py  cell.py  cell_creator.py  core_helmod_model.py  create_cargo_wagon_mall.py  custom_recipes.py  dependency_resolver.py  early_smelter.py  fake_assembly_machine.py  ingredient_resolver.py  main.py  mall_maker.py  materials.py  meta_builder.py  model_builder.py  model_finalizer.py  module.py  module_inserter.py  parallel_stuff.py  production_groups_provider.py  production_line.py  production_line_builder.py  production_line_layouter.py  production_site.py  prototype.py  prototype_parser.py  pyproject.toml  recipe.py  recipe_chooser.py  recipe_finder.py  (+7 more)
builders/: building_resolver.py  recipe_transformations.py
cargo_wagon_block_maker/: assembling_machines.py  assembling_machines_group.py  bbmm.py  beacons.py  belt.py  belt_input.py  blueprint_maker.py  cargo_block_maker.py  cargo_wagon_blueprint.py  connectors.py  eight_block_maker.py  filter_connector.py  input_infrastructure.py  lights.py  output_infrastructure.py  output_infrastructure_chest.py  power.py  roboports.py  train_head.py  train_head_one_liquids.py  train_head_three_liquids.py  train_head_two_liquid.py  wagons.py
config/: assemblies_2.yaml  block_maker.yaml  boilers.yaml  capsules.yaml  cargo_rocket_section.yaml  fast_inserters.yaml  green_circuits_beginning.yaml  meta_schema.py  (+17 more)
(+52 files in other folders)
